Feature/2 include remote terms (#12)
* https://github.com/trustoverip/ctwg-mrg-gen/issues/2

Pull the terms of interest and the relevant versions in to the context map for remote scopes (both of these are obtained from the versions element in the SAF)

Signed-off-by: Sid Haniff <syed_haniff@hotmail.com>

* https://github.com/trustoverip/ctwg-mrg-gen/issues/2

Write the MRG to the glossary dir path specified in the SAF rather than root

Signed-off-by: Sid Haniff <syed_haniff@hotmail.com>

* https://github.com/trustoverip/ctwg-mrg-gen/issues/2

Add grouptag filter for terms filtering

Signed-off-by: Sid Haniff <syed_haniff@hotmail.com>

* https://github.com/trustoverip/ctwg-mrg-gen/issues/2

Add Lombok pre-processor pluginto avoid any local Lombok issues

Signed-off-by: Sid Haniff <syed_haniff@hotmail.com>

* https://github.com/trustoverip/ctwg-mrg-gen/issues/2

Add test to show how list of tags of interest can be reduced to a single Predicate to filter the relevant tags

Signed-off-by: Sid Haniff <syed_haniff@hotmail.com>

* https://github.com/trustoverip/ctwg-mrg-gen/issues/2

Fix bug where generator was treating subdirs of the curated directory as term files rather than ignoring them

Signed-off-by: Sid Haniff <syed_haniff@hotmail.com>

* https://github.com/trustoverip/ctwg-mrg-gen/issues/2

Implement term filtering to match new logic (see https://github.com/trustoverip/ctwg-mrg-gen/issues/3)

Signed-off-by: Sid Haniff <syed_haniff@hotmail.com>

* https://github.com/trustoverip/ctwg-mrg-gen/issues/2

Partial commit for retrieving entries from remote scopes

Signed-off-by: Sid Haniff <syed_haniff@hotmail.com>

* https://github.com/trustoverip/ctwg-mrg-gen/issues/2

Implement (inclusive) filtering with new syntax and update the SAF to reflect this syntax (see https://github.com/trustoverip/ctwg-mrg-gen/issues/3)

Signed-off-by: Sid Haniff <syed_haniff@hotmail.com>

* https://github.com/trustoverip/ctwg-mrg-gen/iss